# Audio-Downloader

./: .gitignore  Audio Downloader.py  LICENSE  README.md  downloader.py  env.yaml  error_handler.py  linux_env.yaml  main.py  pyproject.toml  tempCodeRunnerFile.py  update list.xlsx  windows_env.yml
components/: board.py  infoarea.py  menubar.py  player.py  queueUnit.py  searchbar.py  styles.py
containers/: ScrollArea.py  SettingArea.py  centralWidget.py
cores/: auto_update.py  downloader.py
