[project]
name = "audio-downloader"
version = "3.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydub>=0.25.1",
    "pyqt6>=6.10.2",
    "pytubefix>=8.3.2",
    "requests>=2.32.5",
]
